increase iframe readability

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
+html,
+body {
+  font-size: 18px;
+}
 .netflix-title {
   font-family: "Bebas Neue", sans-serif;
   font-size: 2.5rem;
